radeon: Fix crash with XVideo 24bit RGB images.

See https://bugs.freedesktop.org/show_bug.cgi?id=13274 .